--- a/HTML/index.html
+++ b/HTML/index.html
@@ -19,22 +19,22 @@
         <button class="boton_categorias" id="catHD" onclick="window.location.href='hotdogs.html'">
             <span class="text-background">HOT DOGS</span>
         </button>
-        <button class="boton_categorias" id="catCT">
+        <button class="boton_categorias" id="catCT" onclick="window.location.href='carnesTacos.html'">
             <span class="text-background">CARNES Y TACOS</span>
         </button>
-        <button class="boton_categorias" id="catA">
+        <button class="boton_categorias" id="catA" onclick="window.location.href='alitas.html'">
             <span class="text-background">ALITAS</span>
         </button>
-        <button class="boton_categorias" id="catE">
+        <button class="boton_categorias" id="catE" onclick="window.location.href='enchiladas.html'">
             <span class="text-background">ENCHILADAS</span>
         </button>
-        <button class="boton_categorias" id="catT">
+        <button class="boton_categorias" id="catT" onclick="window.location.href='tortas.html'">
             <span class="text-background">TORTAS</span>
         </button>
-        <button class="boton_categorias" id="catS">
+        <button class="boton_categorias" id="catS" onclick="window.location.href='sincronizadas.html'">
             <span class="text-background">SINCRONIZADAS</span>
         </button>
-        <button class="boton_categorias" id="catB">
+        <button class="boton_categorias" id="catB" onclick="window.location.href='bebidas.html'">
             <span class="text-background">BEBIDAS</span>
         </button>
     </div>
