actualizé la navegación entre vistas para interconectar cada una de las vistas

--- a/HTML/tortas.html
+++ b/HTML/tortas.html
@@ -24,32 +24,32 @@
 </head>
 <body>
     <header class="header">
-        <img src="../Fotos/logo1.png" alt="" id="logo">
+        <img src="../Fotos/logo1.png" alt="" id="logo" onclick="window.location.href='index.html'">
     </header>
     <section>
         <nav id="navBarCategorias">
-            <button class="boton_categorias categorias2" id="catH">
+            <button class="boton_categorias categorias2" id="catH" onclick="window.location.href='hamburguesas.html'">
                 <span class="text-background">HAMBURGUESAS</span>
             </button>
-            <button class="boton_categorias categorias2 ubicacionA" id="catHD">
+            <button class="boton_categorias categorias2" id="catHD" onclick="window.location.href='hotdogs.html'">
                 <span class="text-background">HOT DOGS</span>
             </button>
-            <button class="boton_categorias categorias2" id="catCT">
+            <button class="boton_categorias categorias2" id="catCT" onclick="window.location.href='carnesTacos.html'">
                 <span class="text-background">CARNES Y TACOS</span>
             </button>
-            <button class="boton_categorias categorias2" id="catA">
+            <button class="boton_categorias categorias2" id="catA" onclick="window.location.href='alitas.html'">
                 <span class="text-background">ALITAS</span>
             </button>
-            <button class="boton_categorias categorias2" id="catE">
+            <button class="boton_categorias categorias2" id="catE" onclick="window.location.href='enchiladas.html'">
                 <span class="text-background categorias2">ENCHILADAS</span>
             </button>
-            <button class="boton_categorias categorias2" id="catT">
+            <button class="boton_categorias categorias2 ubicacionA" id="catT" onclick="window.location.href='tortas.html'">
                 <span class="text-background">TORTAS</span>
             </button>
-            <button class="boton_categorias categorias2" id="catS">
+            <button class="boton_categorias categorias2" id="catS" onclick="window.location.href='sincronizadas.html'">
                 <span class="text-background">SINCRONIZADAS</span>
             </button>
-            <button class="boton_categorias categorias2" id="catB">
+            <button class="boton_categorias categorias2" id="catB" onclick="window.location.href='bebidas.html'">
                 <span class="text-background">BEBIDAS</span>
             </button>
         </nav>
