--- a/HTML/carnesTacos.html
+++ b/HTML/carnesTacos.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="../Fotos/logo1.png" alt="" id="logo">
+        <img src="../Fotos/logo1.png" alt="" id="logo" onclick="window.location.href='index.html'">
     </header>
     <section>
         <nav id="navBarCategorias">
