Practicar cambios en repositorio remoto
Se agregó información del restaurante al footer de la páginax

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -42,6 +42,9 @@
     <footer>
         <h2 id="foot1">The King</h2>
         <p id="foot2">Restaurant</p>
+        <br>
+        <p>Cel: 767 117 5953</p>
+        <p>Ubicación: J. Inocente Lugo pte 6, Ciudad Altamirano, México</p>
     </footer>
 </body>
 </html>
