--- a/HTML/index.html
+++ b/HTML/index.html
@@ -43,8 +43,8 @@
         <h2 id="foot1">The King</h2>
         <p id="foot2">Restaurant</p>
         <br>
-        <p>Cel: 767 117 5953</p>
-        <p>Ubicación: J. Inocente Lugo pte 6, Ciudad Altamirano, México</p>
+        <p id="cel">Cel: 767 117 5953</p>
+        <p id="Ubicacion">Ubicación: J. Inocente Lugo pte 6, Ciudad Altamirano, México</p>
     </footer>
 </body>
 </html>
